--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,29 @@
 ---
-- name: Test Variables
-  hosts: s1-spine1
+- name: Test Variables (Play 1)
+  hosts: localhost
   gather_facts: false
+  vars_files:
+    - HNB_Globals.yml
 
   tasks:
 
-    - name: Test Vars.
+    # - name: "Read yml file"
+    #   ansible.builtin.shell: "cat HNB_Globals.yml"
+    #   register: hnb_globals
+
+    # - name: "Parse yml into variables"
+    #   set_fact:
+    #     hnb_global_vars: "{{ hnb_globals.stdout | from_yaml }}"
+    #     ntp_server_1: hnb_global_vars.ntp_servers[0]
+    #     ntp_server_2: hnb_global_vars.ntp_servers[1]
+
+    # - name: Test Vars.
+    #   debug:
+    #     # msg: "{{ ntp.servers[0].name }}"
+    #     msg: "{{ hnb_global_vars.ntp_servers }}"
+    #     # msg: "{{ ntp_server_1 }} and {{ ntp_server_2 }}"
+
+    - name: Print variables
       debug:
-        msg: "{{ ntp.servers[0].name }}"
+        # msg: "{{ ntp_servers }}"
+        msg: "{{ ntp }}"
