--- a/HNB_Globals.yml
+++ b/HNB_Globals.yml
@@ -1,6 +1,9 @@
 ntp_servers:
-  - 1.1.1.1
-  - 2.2.2.2
+  - 192.168.0.1
+  - time1.google.com
+  - time2.google.com
+  - time3.google.com
+  - time4.google.com
 
 syslog_servers:
   - 10.0.0.253
